<resources>
    <string name="app_name">Med-C</string>
    <string name="don_t_have_one">Don\'t have one?</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="medc_logo">MedC Logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_your_account">sign in to your account</string>
    <string name="button">Button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log-in here</string>
    <string name="to_get_the_full_features_of_med_c">to get the full features of Med-C</string>
    <string name="name">Name</string>
    <string name="hint">hint</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">LOG IN</string>
    <string name="log_inbtn">LOG IN</string>
    <string name="or">OR</string>
    <string name="sign_upbtn">SIGN UP</string>
    <string name="loginbg">TODO</string>
    <string name="medc">MedC</string>
    <string name="profilePicture">TODO</string>
    <string name="search">Search</string>
    <string name="micButton">TODO</string>
    <string name="navigationMenu">TODO</string>
    <string name="explore">Explore</string>
    <string name="medImage">TODO</string>
    <string name="medPhoto">TODO</string>
    <string name="most_viewed_products">Most Viewed Products</string>
    <string name="comes_with_individual_box_packaging_plastic_film_for_the_acetate_is_included_to_prevent_scratches">Comes with individual box packaging. Plastic film for the acetate is included to prevent scratches.</string>
    <string name="heng_de_face_shield">Heng De Face Shield</string>
    <string name="buy_button">BUY</string>
    <string name="addcart">addCart</string>
    <string name="face_shield">face shield</string>
    <string name="_10_00">₱10.00</string>
    <string name="string_10_00" />
    <string name="surgical_equipments">Surgical Equipments</string>
    <string name="vitamins">Vitamins</string>
    <string name="customer_name">Vincent Kyle Caballa</string>
    <string name="home">HOME</string>
    <string name="shipping">SHIPPING</string>
    <string name="cart">CART</string>
    <string name="syrup">Syrup</string>
    <string name="medc_logofinal">medc_logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shipping_layout_shape">shipping_layout_shape</string>
    <string name="shipping_text">Shipping</string>
    <string name="shipping_image">TODO</string>
    <string name="line">TODO</string>
    <string name="location_image">TODO</string>
    <string name="money_image">TODO</string>
    <string name="background_stroke">TODO</string>
    <string name="call_image">TODO</string>
    <string name="emailImg">TODO</string>
    <string name="payment_method">Payment Method</string>
    <string name="applied_voucher">Applied Voucher</string>
    <string name="total_amount">Total Amount</string>
    <string name="shopping_bag">TODO</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="fulfilled_by_med_c">Fulfilled by MED-C</string>
    <string name="description">Description</string>
    <string name="heart_image">heart_image</string>
    <string name="buy">BUY</string>
    <string name="minus_button">minus_button</string>
    <string name="plus_button">plus button</string>
    <string name="proceed">Proceed</string>
    <string name="account">ACCOUNT</string>
    <string name="account_background">account_background</string>
    <string name="med_c_premium">MED-C Premium</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_location_image">profile_location_image</string>
    <string name="address">Address</string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="my_bag">My Bag</string>
    <string name="checkout">CHECKOUT</string>
    <string name="my_orders">My Orders</string>
    <string name="orders">ORDERS</string>
    <string name="shipping">SHIPPING</string>
    <string name="cyrus_rj_robles">Cyrus RJ Robles</string>
    <string name="tier">MedC Premium</string>
    <string name="manila_address">551 M.F. Jhocson St., Sampaloc, Manila</string>
    <string name="log_out">log_out</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="cyrus_email_address">cyrusrobles420@gmail.com</string>


</resources>
