<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/productsImg"
            android:layout_width="113dp"
            android:layout_height="116dp"
            android:contentDescription="@string/face_shield"
            android:src="@drawable/hengde_faceshield2" />

        <TextView
            android:id="@+id/descTxt"
            android:layout_width="218dp"
            android:layout_height="60dp"
            android:layout_below="@+id/titleTxt"
            android:layout_toEndOf="@+id/productsImg"
            android:fontFamily="@font/open_sans_light"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/comes_with_individual_box_packaging_plastic_film_for_the_acetate_is_included_to_prevent_scratches"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="187dp"
            android:layout_height="31dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/productsImg"
            android:fontFamily="@font/opensans_bold"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:text="@string/heng_de_face_shield"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/addtoCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/titleTxt"
            android:contentDescription="@string/addcart"
            app:srcCompat="@drawable/ic_baseline_add_shopping_cart" />

        <Button
            android:id="@+id/buyBtn"
            android:layout_width="68dp"
            android:layout_height="26dp"
            android:layout_below="@id/descTxt"
            android:layout_marginStart="149dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/productsImg"
            android:background="@drawable/button_background"
            android:text="@string/buy"
            android:textColor="@android:color/white"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/pricePhp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descTxt"
            android:layout_marginStart="93dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/productsImg"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/_10_00"
            android:textColor="#ffd615" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>